1. Added a link of the online message board 2. Fixed the page-shifting bug after opening a modal 3. Updated libraries

--- a/development/scss/application.scss
+++ b/development/scss/application.scss
@@ -4,6 +4,7 @@
 
 body {
   padding-top: 30px;
+  padding-right: 0 !important;
   overflow: scroll !important;
   border-top: 2px solid $brand-success;
 }
